tests/compile-fail/derive_salsa_value_manual_proof_on_variant.rs
#[derive(salsa::SalsaValue)]
enum Value {
    #[salsa_value(unsafe(prove_safe_to_retain_manually))]
    Variant,
}

fn main() {}
